2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove XS po directory.

	* tp/Texinfo/XS/po: Remove.
	* tp/Texinfo/XS/configure.ac (AC_CONFIG_FILES): Remove 
	po/Makefile.in.

	This keeps AM_GNU_GETTEXT in the XS subdirectory.  Apparently 
	AM_PO_SUBDIRS is also still used, even there is no po 
	subdirectory.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Only use a single po directory.

	* po/POTFILES.in: List parsetexi input files.
	* po/Makevars (XGETTEXT_OPTIONS): Move options from
	tp/Texinfo/XS/po/Makevars.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Find translation directory for parsetexi.

	* tp/Texinfo/XS/parsetexi/api.c (find_locales_dir): New 
	function.
	(init): Call it.
	* NEWS: Mention change.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Pass on srcdir to XS modules.

	* tp/Texinfo/ModulePath.pm.in ($srcdir): New variable.
	(init) [uninstalled]: Set it.
	* tp/Texinfo/XSLoader.pm: Pass on $Texinfo::ModulePath::srcdir 
	to XS modules.
	* tp/Texinfo/XS/parsetexi/api.c (init): Save value of srcdir.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Output message if file ended inside Top node.

	* doc/texinfo.tex (\omittopnode): Redefine @bye and put a 
	message in the output file to say the Top node was omitted.  
	This is most likely for short test files that consist only of a 
	Top node.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Add some news items.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Make texi2dvi --batch the default.

	* util/texi2dvi: (batch): Remove variable.
	(usage): Do not mention --batch.
	(make_tex_command): Unconditionally run in batch mode.
	(make_openout_test): Do not save and restore $batch.
	(input_file_name_decode): Do not set $batch for AUC-Tex input.
	(usage): Remove a comment about 'echo' compatibility.

2019-03-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Inserting Unicode): Include the Ĳ ligature 